--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,16 +1,3 @@
-# services:
-#   db:
-#     image: postgres:14.3
-#     restart: always
-#     ports:
-#       - '5432:5432'
-#     environment:
-#       POSTGRES_PASSWORD: ${DB_PASSWORD}
-#       POSTGRES_DB: ${DB_NAME}
-#     container_name: pedidosdb
-#     volumes:
-#       - ./postgres:/var/lib/postgresql/data
-
 services:
   db:
     container_name: postgres_database
@@ -26,16 +13,11 @@ services:
   api-nest:
     build:
       context: . #En que directorio esta ubicado el Dockerfile
-      target: ${STAGE}
+      target: prod
       #Esta instruccion ejecuta el paso (stage) especifico del Dockerfile
       dockerfile: Dockerfile
 
     image: patriciobo/api-nest
-
-    volumes:
-      - .:/app
-      - /app/node_modules
-      #Crea un volumen anonimo que mapea el contenido del contenedor con el del host (que esta vacio)
 
     container_name: api_nest
 
@@ -54,6 +36,7 @@ services:
 
     restart: always
     working_dir: /app
+    command: sh -c "yarn start:dev"
 #Usa un volumen externo YA CREADO
 volumes:
   postgres-db-nest:
