--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,14 +18,15 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Docker login
+    - name: Docker Login
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PW}}
       run: |
-        echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "Fin de login"
         
-    #- name: Build the Docker image
-     # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Build Docker image
+      run: docker build -t patriciobo/api-nest:1.2.1 .
+
+    - name: Push Docker Image
+      run: docker push patriciobo//api-nest:1.2.1 .
