--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         
     - name: Build Docker image
-      run: docker build --platform linux/amd64,linux/arm64 -t patriciobo/api-nest-github-actions:0.0.2 .
+      run: docker build -t patriciobo/api-nest-github-actions:0.0.2 .
 
     - name: Push Docker Image
       run: docker push patriciobo/api-nest-github-actions:0.0.2
